feat: Add dark and light mode

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,98 @@
-body {
-  --primary-color: #b73cfe;
+/* Navbar */
+.navbar {
+  max-width: 1100px;
+  margin: 0.5rem auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.7rem 2rem;
+  z-index: 1;
+  width: 100%;
+  opacity: 0.9;
+}
+
+.navbar ul {
+  display: flex;
+}
+
+.navbar h1 {
+  color: var(--text-color);
+}
+
+.navbar h1:hover {
+  color: var(--primary-color);
+}
+
+.navbar li a {
+  color: var(--text-color);
+  padding: 0.45rem;
+  margin: 0 0.25rem;
+}
+
+.navbar li a:hover {
+  color: var(--primary-color);
+}
+
+.navbar .welcome span {
+  /* margin-right: 0.6rem; */
+}
+
+.toggle {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 30px;
+}
+.toggle input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: var(--primary-color);
+  transition: 0.4s;
+  border-radius: 30px;
+  /* box-shadow: 0 0 10px #0ff; */
+}
+.slider:before {
+  position: absolute;
+  content: '';
+  height: 24px;
+  width: 24px;
+  left: 3px;
+  bottom: 3px;
+  background-color: white;
+  transition: 0.4s;
+  border-radius: 50%;
+  /* box-shadow: 0 0 10px #0ff; */
+}
+.toggle input:checked + .slider {
+  background-color: var(--primary-color);
+  box-shadow: 0 0 15px var(--primary-color);
+}
+.toggle input:checked + .slider:before {
+  transform: translateX(30px);
+  /* background-color: #000; */
+  background-color: #20232a;
+  box-shadow: 0 0 10px var(--primary-color);
+}
+
+/* Mobile Styles */
+@media (max-width: 700px) {
+  /* Navbar */
+  .navbar {
+    display: block;
+    text-align: center;
+  }
+
+  .navbar ul {
+    text-align: center;
+    justify-content: center;
+  }
 }
