--- a/src/index.css
+++ b/src/index.css
@@ -50,12 +50,8 @@ body {
 }
 
 a {
-  color: var(--primary-color);
+  color: var(--text-color);
   text-decoration: none;
-}
-
-a:hover {
-  color: #666;
 }
 
 ul {
@@ -224,26 +220,29 @@ img {
 
 .btn {
   display: inline-block;
-  background: var(--light-color);
-  color: #333;
+  background: var(--primary-color);
   padding: 0.4rem 1.3rem;
   font-size: 1rem;
   border: none;
-  cursor: pointer;
-  margin-right: 0.5rem;
-  transition: opacity 0.2s ease-in;
   outline: none;
+  cursor: pointer;
+  border-radius: 4px;
+  transition: background-color 0.3s ease, box-shadow 0.3s ease;
+}
+
+.btn:hover {
+  filter: brightness(1.1);
+}
+
+.btn-block {
+  display: block;
+  width: 100%;
 }
 
 .btn-link {
   background: none;
   padding: 0;
   margin: 0;
-}
-
-.btn-block {
-  display: block;
-  width: 100%;
 }
 
 .btn-sm {
@@ -275,7 +274,7 @@ img {
 .bg-primary,
 .badge-primary,
 .alert-primary {
-  background: #0d6efd;
+  background: var(--primary-color);
   color: #fff;
 }
 
@@ -320,10 +319,6 @@ img {
   border: #ccc solid 1px;
 }
 
-.btn:hover {
-  opacity: 0.8;
-}
-
 .bg-light,
 .badge-light {
   border: #ccc solid 1px;
@@ -351,15 +346,22 @@ input[type='date'],
 select,
 textarea {
   display: block;
+  outline: none;
   width: 100%;
   padding: 0.4rem;
   font-size: 1.2rem;
-  border: 1px solid #ccc;
+  border-radius: 4px;
+  transition: all 0.3s ease-in-out;
 }
 
 input[type='submit'],
 button {
   font: inherit;
+}
+
+input[type='text']:focus {
+  border-color: var(--primary-color);
+  box-shadow: 0 1px 2px rgba(0, 123, 123, 0.25);
 }
 
 table th,
