--- a/src/App.css
+++ b/src/App.css
@@ -17,10 +17,17 @@
 
 .navbar h1 {
   color: var(--text-color);
+  text-shadow: 10px 10px 10px var(--primary-color);
 }
 
 .navbar h1:hover {
-  color: var(--primary-color);
+  /* color: var(--primary-color); */
+  /* background-color: var(--primary-color);
+  padding: 10px 10px;
+  border-radius: 4px; */
+  /* text-shadow: 10px 10px 10px var(--primary-color); */
+  /* box-shadow: 10px 10px 10px var(--primary-color); */
+  text-shadow: 10px 10px 10px var(--primary-color);
 }
 
 .navbar li a {
@@ -83,8 +90,43 @@
   box-shadow: 0 0 10px var(--primary-color);
 }
 
-.card h3 a:hover {
+/* .card h3 a:hover {
   color: var(--primary-color);
+} */
+
+.border {
+  border: 1px solid var(--primary-color);
+}
+
+.user_details {
+  border: 1px solid var(--primary-color);
+  box-shadow: 10px 10px 10px var(--primary-color);
+  margin-bottom: 40px;
+}
+
+.user_badges {
+  display: inline-block;
+  font-size: 0.8rem;
+  padding: 0.2rem 0.7rem;
+  text-align: center;
+  margin: 0.3rem;
+  background: var(--light-color);
+  color: #333;
+  border-radius: 5px;
+}
+
+.repo-list {
+  margin: 6px 0;
+}
+.repo-list .repo-name {
+  display: inline; /* Nastaví text ako inline, aby sa hover efekt aplikoval len na text */
+  position: relative; /* Aby hover neovplyvnil layout okolia */
+  color: var(--primary-color);
+  filter: brightness(1.3);
+}
+.repo-list .repo-name:hover {
+  /* text-decoration: underline; */
+  border-bottom: 2px solid var(--primary-color);
 }
 
 /* Mobile Styles */
