--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@
   --background-color: #ffffff;
   --text-color: #333333;
   --primary-color: #007bff;
-  --secondary-color: #6c757d;
+  --secondary-color: #980ffa;
   --border-color: #dee2e6;
 }
 
@@ -28,8 +28,12 @@
   --background-color: #20232a;
   --text-color: #ffffff;
   --primary-color: #0d6efd;
-  --secondary-color: #adb5bd;
+  --secondary-color: #980ffa;
   --border-color: #495057;
+}
+
+.primary {
+  color: var(--primary-color);
 }
 
 * {
@@ -40,9 +44,12 @@
 
 body {
   /* font-family: 'Roboto Mono', monospace; */
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif; */
+
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Noto Sans',
+    Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
   font-size: 1rem;
   line-height: 1.6;
   background-color: var(--background-color);
@@ -50,7 +57,6 @@ body {
 }
 
 a {
-  color: var(--text-color);
   text-decoration: none;
 }
 
@@ -134,7 +140,8 @@ img {
 /* Cards */
 .card {
   padding: 1rem;
-  border: #ccc 1px dotted;
+  /* border: var(--primary-color) 1px dotted; */
+  /* border: 1px solid var(--primary-color); */
   margin: 0.7rem 0;
 }
 
@@ -197,6 +204,19 @@ img {
 }
 .my-3 {
   margin: 3rem 0;
+}
+
+/* Flex*/
+.flex {
+  display: flex;
+}
+.flex-col {
+  display: flex;
+  flex-direction: column;
+}
+.center {
+  justify-content: center;
+  align-items: center;
 }
 
 /* Grid */
@@ -275,6 +295,14 @@ img {
 .badge-primary,
 .alert-primary {
   background: var(--primary-color);
+  color: #fff;
+}
+
+.btn-secondary,
+.bg-secondary,
+.badge-secondary,
+.alert-secondary {
+  background: var(--secondary-color);
   color: #fff;
 }
 
