--- a/src/App.css
+++ b/src/App.css
@@ -10,16 +10,13 @@
   width: 100%;
   opacity: 0.9;
 }
-
 .navbar ul {
   display: flex;
 }
-
 .navbar h1 {
   color: var(--text-color);
-  text-shadow: 10px 10px 10px var(--primary-color);
+  /* text-shadow: 10px 10px 10px var(--primary-color); */
 }
-
 .navbar h1:hover {
   /* color: var(--primary-color); */
   /* background-color: var(--primary-color);
@@ -27,21 +24,15 @@
   border-radius: 4px; */
   /* text-shadow: 10px 10px 10px var(--primary-color); */
   /* box-shadow: 10px 10px 10px var(--primary-color); */
-  text-shadow: 10px 10px 10px var(--primary-color);
+  text-shadow: 6px 6px 6px var(--primary-color);
 }
-
 .navbar li a {
   color: var(--text-color);
   padding: 0.45rem;
   margin: 0 0.25rem;
 }
-
 .navbar li a:hover {
   color: var(--primary-color);
-}
-
-.navbar .welcome span {
-  /* margin-right: 0.6rem; */
 }
 
 .toggle {
@@ -90,43 +81,120 @@
   box-shadow: 0 0 10px var(--primary-color);
 }
 
-/* .card h3 a:hover {
-  color: var(--primary-color);
-} */
+/* Forms */
+.search-form input {
+  margin: 1.2rem 0;
+}
 
-.border {
+.search-form input[type='text'] {
+  background-color: var(--background-color);
+  color: var(--text-color);
+  outline: none;
+  border: 1px solid #3e4446;
+}
+
+.search-form input[type='text']:focus {
   border: 1px solid var(--primary-color);
+  /* box-shadow: 0 1px 2px var(--primary-color); */
+}
+
+.user_list {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2rem;
+  justify-items: center;
+}
+.user-list-card {
+  box-shadow: 6px 12px 16px rgba(0, 0, 0, 0.3);
+  width: 260px;
+  padding: 30px 10px;
+  /* cursor: pointer; */
+  border: 1px solid var(--background-color);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  transition: all 0.3s ease-in-out;
+}
+.user-list-card:hover {
+  border: 1px solid var(--primary-color);
+  box-shadow: 6px 12px 16px var(--primary-color);
+  /* transform: scale(1.05); */
+}
+.user-list-card img {
+  width: 160px;
+}
+.user-list-card a {
+  background: var(--primary-color);
+  color: white;
+  padding: 8px 12px;
+  border-radius: 5px;
+  /* font-weight: bold; */
+  transition: filter 0.2s ease-in-out;
+}
+
+.user-list-card a:hover {
+  /* background: var(--primary-color); */
+  filter: brightness(1.2);
 }
 
 .user_details {
-  border: 1px solid var(--primary-color);
-  box-shadow: 10px 10px 10px var(--primary-color);
+  box-shadow: 6px 12px 16px rgba(0, 0, 0, 0.3);
+  /* border: 1px solid var(--primary-color);
+  box-shadow: 10px 20px 10px var(--primary-color); */
   margin-bottom: 40px;
 }
-
-.user_badges {
-  display: inline-block;
-  font-size: 0.8rem;
-  padding: 0.2rem 0.7rem;
+.user_details img {
+  border-radius: 50%;
+  border: 0.2px solid grey;
+}
+.user_details .user_info {
   text-align: center;
-  margin: 0.3rem;
-  background: var(--light-color);
-  color: #333;
-  border-radius: 5px;
+  /* display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin: auto;
+  justify-content: center;
+  align-items: start;
+  text-align: start; */
+}
+.user_details .user_info .btn {
+  text-align: center;
 }
 
 .repo-list {
-  margin: 6px 0;
+  /* box-shadow: 6px 12px 16px rgba(0, 0, 0, 0.3); */
+  margin-top: 12px;
+  margin-left: 12px;
+  justify-content: center;
 }
-.repo-list .repo-name {
+
+.repo-item {
+  /* margin: 6px 0px 6px 12px; */
+  /* margin-left: 12px; */
+  margin-left: 12px;
+  margin-bottom: 6px;
+  border-bottom: 1px solid grey;
+}
+.repo-name {
   display: inline; /* Nastaví text ako inline, aby sa hover efekt aplikoval len na text */
   position: relative; /* Aby hover neovplyvnil layout okolia */
   color: var(--primary-color);
-  filter: brightness(1.3);
+  /* filter: brightness(1.3); */
 }
-.repo-list .repo-name:hover {
-  /* text-decoration: underline; */
-  border-bottom: 2px solid var(--primary-color);
+:root[data-theme='light'] .repo-name {
+  color: var(--primary-color);
+  filter: brightness(0.9);
+}
+:root[data-theme='dark'] .repo-name {
+  color: var(--primary-color);
+  filter: brightness(1.2);
+}
+.repo-name:hover {
+  border-bottom: 1px solid var(--primary-color);
+}
+.repo-item p {
+  margin: 3px 0;
 }
 
 /* Mobile Styles */
